--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -10,6 +10,8 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32dev
+board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
+upload_port = /dev/ttyUSB0
