--- a/esp32/.vscode/settings.json
+++ b/esp32/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.ino": "cpp",
         "iostream": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "map": "cpp"
     }
 }
