--- a/esp32/.vscode/settings.json
+++ b/esp32/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.ino": "cpp",
         "iostream": "cpp",
         "list": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "sstream": "cpp"
     }
 }
