--- a/esp32/.vscode/settings.json
+++ b/esp32/.vscode/settings.json
@@ -4,6 +4,7 @@
         "iostream": "cpp",
         "list": "cpp",
         "map": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "vector": "cpp"
     }
 }
